apps/test/services/example-service/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-service
spec:
  ingressClassName: traefik
  rules:
    - host: example-service.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-service
                port:
                  name: http
