apps/test/services/example-service/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: test
  labels:
    app: example-service
spec:
  type: ClusterIP
  selector:
    app: example-service
  ports:
    - name: http
      port: 80
      targetPort: http
